# join-proxy-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  Makefile  README.md  TODO.md  dfx.json  mops.toml
certs/: cert.unsave.pem
lib/: Cargo.toml
lib/src/: lib.rs
media/: presentation.odp
motoko/: HttpTypes.mo  README.md  dfx.json  lib.mo  mops.toml
motoko/example/: call.mo  test.mo
motoko/src/: lib.mo
proxy/: Cargo.toml  diesel.toml
proxy/migrations/2025-09-30-005241-0000_user_setup/: up.sql
proxy/src/: config.rs  errors.rs  main.rs
proxy/src/cache/: cache.rs  lockable_map.rs  mem_cache.rs  mod.rs
src/: errors.rs  main.rs
src/cache/: cache.rs  mem_cache.rs
test/: config.toml
test/e2e/: Cargo.toml  Dockerfile  localhost.ext  resolv.conf
test/e2e/src/: lib.rs  main.rs  myhyper.rs
test/e2e/tmpl/: config.toml  dfx.json
test/e2e/tmpls/basic/: config.toml
test/e2e/tmpls/basic/certs/: key.unsafe.pem
test/myhyper/: Cargo.toml
test/myhyper/src/: main.rs
test/test-server/: Cargo.toml  README.md  mops.toml
test/test-server/src/: main.rs
