[package]
name = "passthrough-proxy-rust"
version = "0.0.1"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1" # TODO: features
anyhow = "1.0.83"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
reqwest = { version = "0.12.4", features = ["default-tls", "http2", "macos-system-configuration"] }
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
thiserror = "1.0.60"
