[package]
name = "joining-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.5.1", features = ["macros", "http2", "rustls-0_23"] }
anyhow = "1.0.83"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
http = "1.1.0"
http_for_actix = { version = "0.2.11", package = "http" }
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["default-tls", "http2", "macos-system-configuration"] }
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
sha2 = "0.10.8"
thiserror = "1.0.60"
ic-agent = "0.35.0"
base64 = "0.22.1"
tokio = "1.37.0"
async-trait = "0.1.80"
candid = "0.10.8"
toml = "0.8.13"
rustls = "0.23.7"
rustls-pemfile = "2.1.2"
# lock_api = "0.4.12"
# future-parking_lot = "0.3.3"
