[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candid = "0.10.8"
dotenv = "0.15.0"
env = "0.0.0"
fs_extra = "1.3.0"
ic-agent = "0.35.0"
like-shell = "0.2.8"
serde_json = "1.0.117"
tempdir = "0.3.7"
tokio = { version = "1.37.0", features = ["macros"] }
toml_edit = "0.22.13"
