[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candid = "0.10.8"
ic-agent = "0.36.0"
like-shell = "0.2.8"
serde_json = "1.0.117"
tempdir = "0.3.7"
tokio = { version = "1.37.0", features = ["macros"] }
toml_edit = "0.22.13"

# FIXME: Remove the below.

# hyper = { version = "0.14", features = ["client", "tcp", "http2"] }
# hyper-tls = "*"
# hyper-rustls = "*"
# log = "*"
# env_logger = "*"
# http-body-util = "*"
# bytes = "*"
# pretty_env_logger = "*"

# [[bin]]
# name = "myhyper"
# path = "src/myhyper.rs"
