[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candid = "0.10.8"
futures = "0.3.30"
ic-agent = "0.36.0"
like-shell = "0.3.4"
nix = "0.29.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
tokio = { version = "1.37.0", features = ["macros"] }
toml_edit = "0.22.13"
