[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.11.3"
log = "0.4.21"
rustls = "0.23.8"
rustls-pemfile = "2.1.2"
serde = "1.0.203"
serde_derive = "1.0.203"
thiserror = "1.0.61"
